src/test/deca/context/invalid/initialization/assiging-string-to-bool.deca
// Description:
//    Programme minimaliste affectant un string à un boolean.
//
// Resultats:
//    error : types incompatibles
//
// Historique:
//    cree le 01/01/2025

{
    boolean a;
    a = "wallah je suis boolean";
}
